# steam-game-predictor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  best_xgboost_params.json  fly.toml  game_example.json  log_score_quantiles.json  notebook.ipynb  predict_docker.py  predict_local.py  pyproject.toml  request.py  runapp.sh  train.py  transformers.py
